--- a/Unibo-Template-main/src/Template.Web/Areas/Dipendenti/Users/Index.cshtml
+++ b/Unibo-Template-main/src/Template.Web/Areas/Dipendenti/Users/Index.cshtml
@@ -74,7 +74,7 @@
                                     <button class="dropdown-item text-danger" type="button" onclick="document.getElementById('delete-form').submit();">
                                         <i class="fa-solid fa-trash"></i>&nbsp;Elimina
                                     </button>
-                                    <form hidden autocomplete="off" id="delete-form" method="post" action="@Url.Action(MVC.Dipendenti.Users.Delete(user.Day))">
+                                    <form hidden autocomplete="off" id="delete-form" method="post" action="@Url.Action(MVC.Dipendenti.Users.Delete(user.Id))">
                                         <input type="hidden" asp-for="@user.Day" />
                                     </form>
                                 }
