--- a/Unibo-Template-main/src/Template.Web/Areas/CapoSettore/Users/ManageRequest.cshtml
+++ b/Unibo-Template-main/src/Template.Web/Areas/CapoSettore/Users/ManageRequest.cshtml
@@ -26,7 +26,7 @@
                 {
                     if (user.Id == req.UserId)
                     {
-                        @if (req.Request == false)
+                        @if (req.Request == true)
                         {
                             @if (req.HHoliday != 0)
                             {
