--- a/Unibo-Template-main/src/Template.Web/Areas/Dipendenti/Users/SmartWorking.cshtml
+++ b/Unibo-Template-main/src/Template.Web/Areas/Dipendenti/Users/SmartWorking.cshtml
@@ -1,13 +1,13 @@
 ﻿@model Template.Web.Areas.Dipendenti.Users.SmartWorkingViewModel
 @{
-    ViewData["Title"] = ((Template.Web.Areas.IdentitaViewModel)ViewData[Template.Web.Areas.IdentitaViewModel.VIEWDATA_IDENTITACORRENTE_KEY]).NomeCognome;
+   // ViewData["Title"] = ((Template.Web.Areas.IdentitaViewModel)ViewData[Template.Web.Areas.IdentitaViewModel.VIEWDATA_IDENTITACORRENTE_KEY]).NomeCognome;
     Model.setUserId(((Template.Web.Areas.IdentitaViewModel)ViewData[Template.Web.Areas.IdentitaViewModel.VIEWDATA_IDENTITACORRENTE_KEY]).IdCorrente);
 }
 @section pageTitle {
     <div class="container">
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
-                <h1>@ViewData["Title"]</h1>
+                <h1>SmartWorking</h1>
             </div>
         </nav>
         <a class="btn btn-primary" href="@Url.Action(MVC.Dipendenti.Users.Ferie())" role="button">Richiedi Ferie</a>
@@ -20,7 +20,13 @@
             <form autocomplete="off" method="post" class="onit-form-sm" action="@Url.Action(MVC.Dipendenti.Users.SmartWorking())" id="edit-form">
                 <input id="edit-form-submitter" class="d-none" type="submit" />
                 <fieldset class="pb-3">
-                    <input class="form-control form-control-lg" type="date" asp-for="Day">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-md-auto">
+                                <input class="form-control form-control-lg" type="date" asp-for="Day">
+                            </div>
+                        </div>
+                    </div>
                     <br />
                     <label for="customRange2" class="form-label">Ore di SmartWorking : </label>
                     <output id="hour">1</output>
@@ -30,6 +36,7 @@
                     <input type="hidden" asp-for="UserId">
                 </fieldset>
             </form>
+            <p style=" color:grey;">( Non si può richiedere smartWorking per il giorno corrente )</p>
             <div id="liveAlertPlaceholder"></div>
             <button type="button" class="btn btn-outline-primary" id="liveAlertBtn" onclick="document.getElementById('edit-form-submitter').click()">Invia</button>
         </div>
