--- a/Unibo-Template-main/src/Template.Web/Features/Login/Login.cshtml
+++ b/Unibo-Template-main/src/Template.Web/Features/Login/Login.cshtml
@@ -33,4 +33,22 @@
             <button type="submit" class="btn btn-primary">Accedi</button>
         </div>
     </form>
+
+    <div class="mt-4">
+        <p><strong>Credenziali responsabile:</strong></p>
+        <ul>
+            <li>Email: bob@vanko.it</li>
+            <li>Password: Test</li>
+        </ul>
+
+        <p><strong>Credenziali utenti:</strong></p>
+        <ul>
+            <li>Email: alberto.rossi@vanko.it</li>
+            <li>Password: Prova</li>
+            <br />
+            <li>Email: matteo@vanko.it</li>
+            <li>Password: Test</li>
+        </ul>
+    </div>
+    <p>Form considerazioni: <a href="https://forms.gle/rzpi6xJrke17fCbh6">Link al form</a></p>
 </div>
