--- a/Unibo-Template-main/src/Template.Web/Areas/CapoSettore/Users/ManageRequest.cshtml
+++ b/Unibo-Template-main/src/Template.Web/Areas/CapoSettore/Users/ManageRequest.cshtml
@@ -1,11 +1,19 @@
 ﻿@model Template.Web.Areas.CapoSettore.Users.ManageRequestViewModel
 
 @section pageTitle {
-    <div class="container">
-        <div class="col">
-            <a class="btn btn-primary" href="@Url.Action(MVC.CapoSettore.Users.Index())">Dashboard</a>
-        </div>
-    </div>
+    <h1>Richieste in attesa di essere valutate</h1>
+    <style>
+        ul#navigazione li {
+            display: inline;
+        }
+    </style>
+
+    <nav>
+        <ul id="navigazione">
+            <li><a class="btn btn-primary" href="@Url.Action(MVC.CapoSettore.Users.Index())">Home</a></li>
+            <li><a class="btn btn-primary" href="/Dipendenti">Le mie richieste</a></li>
+        </ul>
+    </nav>
 }
 
 <div>
@@ -55,3 +63,5 @@
         </tbody>
     </table>
 </div>
+
+<p>Form considerazioni: <a href="https://forms.gle/rzpi6xJrke17fCbh6">Link al form</a></p>
