--- a/Unibo-Template-main/src/Template.Web/Areas/Dipendenti/Users/Ferie.cshtml
+++ b/Unibo-Template-main/src/Template.Web/Areas/Dipendenti/Users/Ferie.cshtml
@@ -10,7 +10,6 @@
                 <h1>Richiesta Ferie</h1>
             </div>
         </nav>
-        <a class="btn btn-primary" href="@Url.Action(MVC.Dipendenti.Users.SmartWorking())" role="button">SmartWorking</a>
     </div>   
 }
 @section pageSubtitle{
@@ -22,13 +21,13 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-md-auto">
-                            <p style="font-size: 30px;">dal : </p>
+                            <p style="font-size: 120%;">dal : </p>
                         </div>
                         <div class="col-md-auto">
                         <input class="form-control form-control-lg" type="date" asp-for="Day" oninput="dayEnd.value=this.value">
                         </div>
                         <div class="col-md-auto">
-                            <p style="font-size: 30px;">al : </p>
+                            <p style="font-size: 120%;">al : </p>
                         </div>
                         <div class="col-md-auto">
                         <input class="form-control form-control-lg" type="date" asp-for="DayEnd" id="dayEnd"/>
@@ -38,7 +37,6 @@
                     </div>
                 </div>
             </form>
-            <p style=" color:grey;">( I giorni festivi non vengono calcolati e non posso essere selezionati - non si può richiedere una ferie per il giorno corrente )</p>
             <div id="liveAlertPlaceholder"></div>
             <button type="button" class="btn btn-outline-primary" id="liveAlertBtn" onclick="document.getElementById('edit-form-submitter').click()">Invia</button>
         </div>
