--- a/Unibo-Template-main/src/Template.Web/Areas/Dipendenti/Users/Index.cshtml
+++ b/Unibo-Template-main/src/Template.Web/Areas/Dipendenti/Users/Index.cshtml
@@ -17,12 +17,12 @@
         <table class="table">
             <thead>
                 <tr class="sticky-column-d">
-                    <th scope="col">Date Inizo</th>
-                    <th scope="col">Date Fine</th>
-                    <th scope="col">Ore Lavorative</th>
-                    <th scope="col">Ore SmartWorking</th>
-                    <th scope="col">Ore Ferie</th>
-                    <th scope="col"></th>
+                    <th class="th-d" scope="col">Date Inizo</th>
+                    <th class="th-d" scope="col">Date Fine</th>
+                    <th class="th-d" scope="col">Ore Lavorative</th>
+                    <th class="th-d" scope="col">Ore SmartWorking</th>
+                    <th class="th-d" scope="col">Ore Ferie</th>
+                    <th class="th-d" scope="col"></th>
                 </tr>
             </thead>
             <tbody class="table-group-divider">
